# scribe-llm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: README.md
config/: config.example.toml
docs/: index.html  index.zh.html  leaderboard.json  leaderboard.md  open-knowledge-format.md  providers.md  providers.zh-CN.md  recursive-scaffold-hypothesis.md  three-guarantees.md  wsl_ollama_guide.md  wsl_ollama_guide.zh-CN.md
promo/: README.md  _demo_grammar.py  demo.cast  record-demo.sh  source.md
scribe/: __init__.py  cli.py  compare.py  config.py  discovery.py  documents.py  grammar.py  knowledge.py  llm_adapter.py  mail.py  prompts.py  pulse.py  queue.py  reasoning_gate.py  reliability.py  session.py  skills_executor.py  status.py  trace.py  tui.py  tui_app.py  vault.py  web.py  wiki.py  worldmodel.py
scribe/evolve/: __init__.py  evaluate.py  guard.py  leaderboard.py  shadow.py  spi.py
scribe/memory/: __init__.py  context.py  hybrid.py  provenance.py  rag.py  sme.py
scribe/seed/: constitution.md  system.md
scribe/seed/eval/: MANIFEST.sha256  grounded.jsonl  tasks.jsonl
scribe/skills/: __init__.py
scribe/skills/deep-research/: SKILL.md
scribe/skills/grill/: SKILL.md
scribe/skills/teach/: SKILL.md
scribe/skills/wiki-memory/: SKILL.md
scribe/skills/writer/: SKILL.md
scribe/templates/: editor.html  index.html  print.html
scribe/tools/: __init__.py  checkpoint.py  fs.py  sandbox.py  shell.py  web.py
scribe/ui/: __init__.py  console.py  logo.py  progress.py  theme.py
scripts/: install.sh  scribe_gauntlet.py  start-server.sh
tests/: test_context.py  test_core.py  test_discovery_compare.py  test_documents.py  test_evolve.py  test_grammar.py  test_guard.py  test_hybrid.py  test_knowledge.py  test_mail.py  test_memory.py  test_provenance.py  test_queue.py  test_reliability.py  test_sandbox.py  test_security.py  test_session_resume.py  test_shadow.py  test_skills.py  test_spi.py  test_status_line.py  test_terminal_hardening.py  test_tools.py  test_trace_vault.py  test_tui.py  test_wiki.py  test_worldmodel.py
