[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scribe-ai"
version = "0.2.1"
description = "Universal TUI agent for autonomous research and writing, powered by llama.cpp"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pedja Urosevic", email = "pedjaurosevic@gmail.com" }
]
keywords = ["llm", "agent", "autonomous", "research", "writing", "tui", "llama.cpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "click>=8.0.0",
    "toml>=0.10.0",
    "lancedb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://pedjaurosevic.github.io/scribe-ai/"
Repository = "https://github.com/pedjaurosevic/scribe-ai"
Issues = "https://github.com/pedjaurosevic/scribe-ai/issues"

[project.scripts]
scribe = "scribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scribe"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
# cli.py configures the locale and reconfigures stdio before importing the rest
# of the package, so its imports intentionally come after that setup block.
"scribe/cli.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
