[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scribe-llm"
version = "1.2.0"
description = "Universal TUI agent for autonomous research and writing, powered by llama.cpp"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Pedja Urosevic", email = "pedjaurosevic@gmail.com" }
]
keywords = ["llm", "agent", "autonomous", "research", "writing", "tui", "llama.cpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "click>=8.0.0",
    "toml>=0.10.0",
    "lancedb>=0.4.0",
    "pylance>=0.9.0",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://pedjaurosevic.github.io/scribe-llm/"
Repository = "https://github.com/pedjaurosevic/scribe-llm"
Issues = "https://github.com/pedjaurosevic/scribe-llm/issues"

[project.scripts]
scribe-llm = "scribe.cli:main"
scb = "scribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scribe"]

[tool.pytest.ini_options]
markers = [
    "integration: needs external services (a running llama-server or model downloads); excluded from CI",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
# cli.py configures the locale and reconfigures stdio before importing the rest
# of the package, so its imports intentionally come after that setup block.
"scribe/cli.py" = ["E402"]
# __init__.py silences the torchao warning before the heavy ML imports, and its
# submodule imports come last to avoid circular imports.
"scribe/__init__.py" = ["E402"]
# grammar.py embeds a literal GBNF JSON grammar; its string-rule line cannot be
# wrapped without changing the grammar.
"scribe/grammar.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
